<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.github.katarem.katapi</groupId>
  <artifactId>KatApi</artifactId>
  <packaging>jar</packaging>
  <version>1.1.1</version>
  <name>KatApi</name>
  <description>Library to use the Riot League of Legends' related APIs</description>
  <url>https://github.com/katarem/KatApi</url>
  <properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<exec.mainClass>io.github.katarem.katapi.Example</exec.mainClass>
  </properties>
  <dependencies>
    <dependency>
			<groupId>com.squareup.retrofit2</groupId>
			<artifactId>retrofit</artifactId>
			<version>2.9.0</version>
		</dependency>
		<dependency>
			<groupId>com.squareup.retrofit2</groupId>
			<artifactId>converter-gson</artifactId>
			<version>2.9.0</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
  </dependencies>

  <licenses>
	<license>
		<name>GPL-v3.0</name>
		<url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
	</license>
  </licenses>

  <developers>
	<developer>
		<id>katarem</id>
		<name>Rem</name>
		<url>https://github.com/katarem</url>
	</developer>
  </developers>
  
  <build>
		<plugins>
			<!-- generate source jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- generate javadoc jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.4.1</version>
			</plugin>
		</plugins>
	</build>
</project>
